--- a/game.css
+++ b/game.css
@@ -6,24 +6,26 @@ body{
     height: 200px;
     width: 200px;
     border-radius: 20%;
-    border: 10px solid black;
+    border: 7.5px solid black;
     margin: 2.5rem;
+    
+
 }
 .btn-container{
     display: flex;
     justify-content: center;
 }
 .red{
-    background-color: #d95980;
+    background-color: #FA0505;
 }
 .yellow{
-    background-color: #f99b45;
+    background-color: #80FA05;
 }
 .green{
-    background-color: #63aac0;
+    background-color: #05FAFA;
 }
 .purple{
-    background-color: #819ff9;
+    background-color: #7F05FA;
 }
 .flash{
     background-color: white;
@@ -35,3 +37,49 @@ h1{
     font-size: 50px;
     color: blue;
 }
+
+
+/* Responsive Layout */
+@media (max-width: 768px) {
+
+    h1{
+        font-size:2rem;
+    }
+
+    h2{
+        font-size:1.2rem;
+    }
+
+    .btn-container{
+        flex-direction:column;
+        align-items:center;
+    }
+
+    .line-one, .line-two{
+        display:flex;
+    }
+
+    .btn{
+        height:120px;
+        width:120px;
+        margin:12px;
+    }
+}
+
+/* Extra small phones */
+@media (max-width: 400px){
+    .btn{
+        height:90px;
+        width:90px;
+        margin:10px;
+    }
+
+    h1{
+        font-size:1.6rem;
+    }
+}
+
+
+
+
+ 
